# c_project_starter

./: .gitignore  CMakeLists.txt  README.md  cgen  install.sh  main.c
.github/: CODEOWNERS
lib/argument_parser/: README.md  argument_parser.h
lib/argument_parser/lib/simple_data_structures/: datastructures.h
lib/argument_parser/lib/simple_data_structures/src/hash/: hash.h
lib/argument_parser/src/: parseargs.c  parseargs.h
